feat: Add code that represents the leaf node

--- a/Represent_tree.ipynb
+++ b/Represent_tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,8 +80,12 @@
     "            child_parent = sorted((zip(nodes, [parent_node[i] for i in nodes])), key = lambda x: (x[1],x[0]) )\n",
     "            nodes1 = [i[0] for i in child_parent]\n",
     "            for node in nodes1:\n",
-    "                print('node #{}'.format(node), feat_names[feat_in_node[node]], '<=', round(threshold[node], round_digit), model_dt.criterion, '=', round(impurity[node], round_digit), \n",
+    "                if feat_in_node[node] == -2:\n",
+    "                    print('node #{} *leaf*'.format(node), model_dt.criterion, '=', round(impurity[node], round_digit), \n",
     "                      'samples =', samples[node], 'value =', round(values[node], round_digit), 'parent_node =', parent_node[node], end=' || ')\n",
+    "                else:\n",
+    "                    print('node #{}'.format(node), feat_names[feat_in_node[node]], '<=', round(threshold[node], round_digit), model_dt.criterion, '=', round(impurity[node], round_digit), \n",
+    "                          'samples =', samples[node], 'value =', round(values[node], round_digit), 'parent_node =', parent_node[node], end=' || ')\n",
     "            print('\\n')  "
    ]
   },
@@ -94,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,27 +117,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "numpy.ndarray"
+       "array(['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'RAD',\n",
+       "       'TAX', 'PTRATIO', 'B', 'LSTAT'], dtype='<U7')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(data['feature_names'])"
+    "data['feature_names']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -189,10 +194,10 @@
       "node #3 DIS <= 1.3848 mse = 25.6935 samples = 203 value = 23.3246 parent_node = 1 || node #4 CRIM <= 6.9258 mse = 19.0053 samples = 134 value = 14.8291 parent_node = 1 || node #5 LSTAT <= 15.765 mse = 38.3057 samples = 41 value = 32.3634 parent_node = 2 || node #6 PTRATIO <= 19.65 mse = 39.671 samples = 26 value = 44.65 parent_node = 2 || \n",
       "\n",
       "Depth 3\n",
-      "node #7 CRIM <= 10.1092 mse = 91.5769 samples = 4 value = 44.475 parent_node = 3 || node #8 RM <= 6.543 mse = 15.1967 samples = 199 value = 22.8995 parent_node = 3 || node #11 B <= -2.0 mse = 10.4013 samples = 76 value = 17.0618 parent_node = 4 || node #12 B <= -2.0 mse = 15.1879 samples = 58 value = 11.9034 parent_node = 4 || node #13 B <= -2.0 mse = 21.5856 samples = 39 value = 33.3 parent_node = 5 || node #14 B <= -2.0 mse = 13.69 samples = 2 value = 14.1 parent_node = 5 || node #15 B <= -2.0 mse = 19.7272 samples = 25 value = 45.56 parent_node = 6 || node #16 B <= -2.0 mse = -0.0 samples = 1 value = 21.9 parent_node = 6 || \n",
+      "node #7 CRIM <= 10.1092 mse = 91.5769 samples = 4 value = 44.475 parent_node = 3 || node #8 RM <= 6.543 mse = 15.1967 samples = 199 value = 22.8995 parent_node = 3 || node #11 *leaf* mse = 10.4013 samples = 76 value = 17.0618 parent_node = 4 || node #12 *leaf* mse = 15.1879 samples = 58 value = 11.9034 parent_node = 4 || node #13 *leaf* mse = 21.5856 samples = 39 value = 33.3 parent_node = 5 || node #14 *leaf* mse = 13.69 samples = 2 value = 14.1 parent_node = 5 || node #15 *leaf* mse = 19.7272 samples = 25 value = 45.56 parent_node = 6 || node #16 *leaf* mse = -0.0 samples = 1 value = 21.9 parent_node = 6 || \n",
       "\n",
       "Depth 4\n",
-      "node #17 B <= -2.0 mse = 0.0 samples = 3 value = 50.0 parent_node = 7 || node #18 B <= -2.0 mse = -0.0 samples = 1 value = 27.9 parent_node = 7 || node #9 B <= -2.0 mse = 8.6351 samples = 156 value = 21.6321 parent_node = 8 || node #10 B <= -2.0 mse = 12.0305 samples = 43 value = 27.4977 parent_node = 8 || \n",
+      "node #17 *leaf* mse = 0.0 samples = 3 value = 50.0 parent_node = 7 || node #18 *leaf* mse = -0.0 samples = 1 value = 27.9 parent_node = 7 || node #9 *leaf* mse = 8.6351 samples = 156 value = 21.6321 parent_node = 8 || node #10 *leaf* mse = 12.0305 samples = 43 value = 27.4977 parent_node = 8 || \n",
       "\n"
      ]
     }
@@ -203,405 +208,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([  0,   0,   0, ..., 403, 403, 403], dtype=int64),\n",
-       " array([0, 1, 4, ..., 3, 8, 9], dtype=int64))"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "np.where(model_dt.decision_path(X_train).toarray()==1)"
+    "* The above result is the same with the result of plot_tree in scikit-learn library."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dp = model_dt.decision_path(X_train).toarray()\n",
-    "apply = []\n",
-    "for row in dp:\n",
-    "    final_idx = np.where(row==1)[0][-1]\n",
-    "    apply.append(final_idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.alltrue(np.array(apply)== model_dt.apply(X_train))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([ 9, 10, 11, 12, 13, 14, 15, 16, 17, 18], dtype=int64),\n",
-       " array([156,  43,  76,  58,  39,   2,  25,   1,   3,   1], dtype=int64))"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.unique(model_dt.apply(X_train), return_counts=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 5, 12,  5,  7,  0, 12, 10,  0,  5, -2, -2, -2, -2, -2, -2, -2, -2,\n",
-       "       -2, -2], dtype=int64)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model_dt.tree_.feature"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 6.94099998, 14.4000001 ,  7.43700004,  1.38484997,  6.92579484,\n",
-       "       15.76499987, 19.65000057, 10.10917521,  6.54299998, -2.        ,\n",
-       "       -2.        , -2.        , -2.        , -2.        , -2.        ,\n",
-       "       -2.        , -2.        , -2.        , -2.        ])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model_dt.tree_.threshold"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([22.79653465, 19.94658754, 37.13134328, 23.32463054, 14.82910448,\n",
-       "       32.36341463, 44.65      , 44.475     , 22.89949749, 21.63205128,\n",
-       "       27.49767442, 17.06184211, 11.90344828, 33.3       , 14.1       ,\n",
-       "       45.56      , 21.9       , 50.        , 27.9       ])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model_dt.tree_.value.flatten()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1,  3,  5,  7, 11, 13, 15, 17,  9, -1, -1, -1, -1, -1, -1, -1, -1,\n",
-       "       -1, -1], dtype=int64)"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model_dt.tree_.children_left"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 2,  4,  6,  8, 12, 14, 16, 18, 10, -1, -1, -1, -1, -1, -1, -1, -1,\n",
-       "       -1, -1], dtype=int64)"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model_dt.tree_.children_right"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model_dt.tree_.node_count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parent(model):\n",
-    "    n_nodes = model.tree_.node_count\n",
-    "    parent_list = [0]*n_nodes\n",
-    "    left = model.tree_.children_left.tolist()\n",
-    "    right = model.tree_.children_right.tolist()\n",
-    "    \n",
-    "    for n in range(1, n_nodes):\n",
-    "        if n%2==0:\n",
-    "            parent = right.index(n)\n",
-    "            parent_list[n] = parent\n",
-    "        else:\n",
-    "            parent = left.index(n)\n",
-    "            parent_list[n] = parent\n",
-    "    return np.array(parent_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 1, 1, 2, 2, 3, 3, 8, 8, 4, 4, 5, 5, 6, 6, 7, 7])"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parent(model_dt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def depth(model):\n",
-    "    n_nodes = model.tree_.node_count\n",
-    "    depth_list = [0]*n_nodes\n",
-    "    left = model.tree_.children_left.tolist()\n",
-    "    right = model.tree_.children_right.tolist()\n",
-    "    \n",
-    "    for n in range(1, n_nodes):\n",
-    "        if n%2==0:\n",
-    "            parent = right.index(n)\n",
-    "            depth_list[n] = depth_list[parent]+1\n",
-    "        else:\n",
-    "            parent = left.index(n)\n",
-    "            depth_list[n] = depth_list[parent]+1\n",
-    "    return depth_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 1, 2, 2, 2, 2, 3, 3, 4, 4, 3, 3, 3, 3, 3, 3, 4, 4]"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "depth(model_dt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Depth 0\n",
-      "node #0 RM <= 6.941 mse = 86.873 samples = 404 value = 22.797 || \n",
-      "\n",
-      "Depth 1\n",
-      "node #1 LSTAT <= 14.4 mse = 40.321 samples = 337 value = 19.947 || node #2 RM <= 7.437 mse = 74.684 samples = 67 value = 37.131 || \n",
-      "\n",
-      "Depth 2\n",
-      "node #3 DIS <= 1.385 mse = 25.693 samples = 203 value = 23.325 || node #4 CRIM <= 6.926 mse = 19.005 samples = 134 value = 14.829 || node #5 LSTAT <= 15.765 mse = 38.306 samples = 41 value = 32.363 || node #6 PTRATIO <= 19.65 mse = 39.671 samples = 26 value = 44.65 || \n",
-      "\n",
-      "Depth 3\n",
-      "node #7 CRIM <= 10.109 mse = 91.577 samples = 4 value = 44.475 || node #8 RM <= 6.543 mse = 15.197 samples = 199 value = 22.899 || node #11 B <= -2.0 mse = 10.401 samples = 76 value = 17.062 || node #12 B <= -2.0 mse = 15.188 samples = 58 value = 11.903 || node #13 B <= -2.0 mse = 21.586 samples = 39 value = 33.3 || node #14 B <= -2.0 mse = 13.69 samples = 2 value = 14.1 || node #15 B <= -2.0 mse = 19.727 samples = 25 value = 45.56 || node #16 B <= -2.0 mse = -0.0 samples = 1 value = 21.9 || \n",
-      "\n",
-      "Depth 4\n",
-      "node #17 B <= -2.0 mse = 0.0 samples = 3 value = 50.0 || node #18 B <= -2.0 mse = -0.0 samples = 1 value = 27.9 || node #9 B <= -2.0 mse = 8.635 samples = 156 value = 21.632 || node #10 B <= -2.0 mse = 12.03 samples = 43 value = 27.498 || \n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "max_depth = model_dt.tree_.max_depth\n",
-    "node_depth = np.array(depth(model_dt))\n",
-    "feat_names = data['feature_names']\n",
-    "feat_in_node = model_dt.tree_.feature\n",
-    "threshold = model_dt.tree_.threshold\n",
-    "impurity = model_dt.tree_.impurity\n",
-    "samples = model_dt.tree_.n_node_samples\n",
-    "values = model_dt.tree_.value.flatten()\n",
-    "round_ = 3\n",
-    "\n",
-    "for dep in range(max_depth+1):\n",
-    "    print('Depth', dep)\n",
-    "    nodes = np.where(node_depth==dep)[0]\n",
-    "    child_parent = sorted((zip(nodes, [parent(model_dt)[i] for i in nodes])), key = lambda x: (x[1],x[0]) )\n",
-    "    nodes1 = [i[0] for i in child_parent]\n",
-    "    for node in nodes1:\n",
-    "        print('node #{}'.format(node), feat_names[feat_in_node[node]], '<=', round(threshold[node], round_), model_dt.criterion, '=', round(impurity[node], round_), \n",
-    "              'samples =', samples[node], 'value =', round(values[node], round_), end=' || ')\n",
-    "    print('\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(17, 7), (18, 7), (9, 8), (10, 8)]"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sorted((zip(nodes, [parent(model_dt)[i] for i in nodes])), key = lambda x: (x[1],x[0]) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[8, 8, 7, 7]"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[parent(model_dt)[i] for i in nodes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'          '"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "' '*10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
