feat: Add code that print nodes only

--- a/Represent_tree.ipynb
+++ b/Represent_tree.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +86,24 @@
     "                else:\n",
     "                    print('node #{}'.format(node), feat_names[feat_in_node[node]], '<=', round(threshold[node], round_digit), model_dt.criterion, '=', round(impurity[node], round_digit), \n",
     "                          'samples =', samples[node], 'value =', round(values[node], round_digit), 'parent_node =', parent_node[node], end=' || ')\n",
+    "            print('\\n')  \n",
+    "            \n",
+    "    def print_nodes(self, feat_names=None):\n",
+    "        max_depth = self.model.tree_.max_depth\n",
+    "        parent_node = self._parent()\n",
+    "        node_depth = self._depth()\n",
+    "        feat_in_node = self.model.tree_.feature\n",
+    "\n",
+    "        for dep in range(max_depth+1):\n",
+    "            print('Depth', dep)\n",
+    "            nodes = np.where(node_depth==dep)[0]\n",
+    "            child_parent = sorted((zip(nodes, [parent_node[i] for i in nodes])), key = lambda x: (x[1],x[0]) )\n",
+    "            nodes1 = [i[0] for i in child_parent]\n",
+    "            for node in nodes1:\n",
+    "                if feat_in_node[node] == -2:\n",
+    "                    print('n #{} *leaf*'.format(node),  'parent =', parent_node[node], end=' || ')\n",
+    "                else:\n",
+    "                    print('n #{}'.format(node),  'parent =', parent_node[node], end=' || ')\n",
     "            print('\\n')  "
    ]
   },
@@ -177,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -205,6 +223,37 @@
    "source": [
     "rt = represent_tree(model_dt)\n",
     "rt.print_tree(round_digit=4, feat_names=data['feature_names'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Depth 0\n",
+      "n #0 parent = 0 || \n",
+      "\n",
+      "Depth 1\n",
+      "n #1 parent = 0 || n #2 parent = 0 || \n",
+      "\n",
+      "Depth 2\n",
+      "n #3 parent = 1 || n #4 parent = 1 || n #5 parent = 2 || n #6 parent = 2 || \n",
+      "\n",
+      "Depth 3\n",
+      "n #7 parent = 3 || n #8 parent = 3 || n #11 *leaf* parent = 4 || n #12 *leaf* parent = 4 || n #13 *leaf* parent = 5 || n #14 *leaf* parent = 5 || n #15 *leaf* parent = 6 || n #16 *leaf* parent = 6 || \n",
+      "\n",
+      "Depth 4\n",
+      "n #17 *leaf* parent = 7 || n #18 *leaf* parent = 7 || n #9 *leaf* parent = 8 || n #10 *leaf* parent = 8 || \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "rt.print_nodes(feat_names=data['feature_names'])"
    ]
   },
   {
