refactor: Replace raw code to importing module

--- a/Paper implementation_PCA.ipynb
+++ b/Paper implementation_PCA.ipynb
@@ -46,42 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class gram_schmidt:\n",
-    "    '''def __init__(self, X):\n",
-    "        self.X = X.astype(float)'''\n",
-    "        \n",
-    "    def _proj(self, u, v):\n",
-    "        return (np.vdot(v, u) / np.vdot(u,u))*u\n",
-    "    \n",
-    "    def fit_transform(self, X, col_vec = True, normal = True):\n",
-    "        #X = X.astype(float)\n",
-    "        if col_vec:\n",
-    "            mat = X.copy()\n",
-    "        else:\n",
-    "            mat = (X.T).copy()\n",
-    "        \n",
-    "        N = mat.shape[1]\n",
-    "        mat_orth = np.array([]).reshape(mat.shape[0], -1)\n",
-    "        for n in range(N):\n",
-    "            u = mat[:, n:n+1].copy()\n",
-    "            if n ==0:\n",
-    "                mat_orth = np.hstack((mat_orth,u))\n",
-    "            else:\n",
-    "                for i in range(n):\n",
-    "                    u -= self._proj(mat_orth[:, i:i+1], mat[:, n:n+1])\n",
-    "                mat_orth = np.hstack((mat_orth,u))\n",
-    "        \n",
-    "        if normal:\n",
-    "            result = mat_orth / np.linalg.norm(mat_orth, axis=0)\n",
-    "            if col_vec:\n",
-    "                return result\n",
-    "            else:\n",
-    "                return result.T\n",
-    "        else:\n",
-    "            if col_vec:\n",
-    "                return mat_orth\n",
-    "            else:\n",
-    "                return mat_orth.T"
+    "from packages.GramSchmidt import gram_schmidt"
    ]
   },
   {
@@ -225,14 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "runtime: 0.8671596050262451\n"
+      "runtime: 0.8331811428070068\n"
      ]
     }
    ],
@@ -288,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +305,7 @@
        "       [-0.02155668,  0.47118897]])"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +335,7 @@
        "       [9.03251854e-17, 1.00000000e+00]])"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +446,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +477,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +516,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +559,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -674,14 +639,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7553637027740479\n"
+      "0.7451009750366211\n"
      ]
     }
    ],
@@ -699,14 +664,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.28052210807800293\n"
+      "0.3071329593658447\n"
      ]
     }
    ],
@@ -731,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +705,7 @@
        "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +725,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +761,7 @@
        "True"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
