refactor: Replace raw code to SVD module

--- a/Paper implementation_PCA.ipynb
+++ b/Paper implementation_PCA.ipynb
@@ -46,41 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from packages.GramSchmidt import gram_schmidt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def svd_thin(data, ):\n",
-    "    dim = data.shape[1]\n",
-    "    rank = np.linalg.matrix_rank(data)\n",
-    "    relu = np.vectorize(lambda x: np.real(x) if np.real(x)>=0 else .0)\n",
-    "    \n",
-    "    #eval_u, evec_u = np.linalg.eig(data.dot(data.T), )\n",
-    "    eval_v, evec_v = np.linalg.eig(data.T.dot(data), )\n",
-    "    \n",
-    "    gs = gram_schmidt()\n",
-    "    #evec_u_gs = gs.fit_transform(evec_u)\n",
-    "    evec_v_gs = gs.fit_transform(evec_v)\n",
-    "        \n",
-    "    s = eval_v.copy()\n",
-    "    s = np.sqrt(relu(s))\n",
-    "    s1 = np.sort(s)[::-1]\n",
-    "    if dim > rank:\n",
-    "        s1[-(dim-rank):] = 0\n",
-    "    \n",
-    "    S = np.eye(dim)*s1\n",
-    "    \n",
-    "    v_idx = np.sqrt(relu(np.real(eval_v))).argsort()[-dim:][::-1]\n",
-    "    v = evec_v_gs[:, v_idx ]\n",
-    "    \n",
-    "    u = data.dot(v)/s1\n",
-    "    \n",
-    "    return u, S,  v"
+    "from packages.GramSchmidt import gram_schmidt\n",
+    "from packages.SVD import svd_thin"
    ]
   },
   {
@@ -99,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,14 +606,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7451009750366211\n"
+      "0.7632288932800293\n"
      ]
     }
    ],
@@ -664,14 +631,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3071329593658447\n"
+      "0.3131856918334961\n"
      ]
     }
    ],
