docs: Add formulae

--- a/Scalers.ipynb
+++ b/Scalers.ipynb
@@ -195,6 +195,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\large \\displaystyle X_{scaled} = \\frac{X - \\mu}{\\sigma}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -269,6 +276,13 @@
    "metadata": {},
    "source": [
     "## MinMax scaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\large \\displaystyle X_{scaled} = \\frac{X - min}{max - min}$"
    ]
   },
   {
@@ -347,6 +361,13 @@
    "metadata": {},
    "source": [
     "## Robust scaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\large \\displaystyle X_{scaled} = \\frac{X - \\tilde{X}}{IQR} = \\frac{X - Q_2}{Q_3 - Q_1}$"
    ]
   },
   {
