docs: Correct formula

--- a/MLE.ipynb
+++ b/MLE.ipynb
@@ -208,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Find $\\theta$ s.t.  $\\large \\underset{\\theta}{\\mathrm{arg\\,min}}\\; -\\mathcal{L}(\\theta;\\mathbf{x})$"
+    "* Find $\\theta$ s.t.  $\\large \\underset{\\theta}{\\mathrm{arg min}}\\, -\\mathcal{L}(\\theta;\\mathbf{x})$"
    ]
   },
   {
