docs: Add formula

--- a/MLE.ipynb
+++ b/MLE.ipynb
@@ -28,7 +28,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**pdf**: $\\large f(x) = \\theta e^{-\\theta x}$"
+    "**pdf**: $\\large f(x) = \\theta e^{-\\theta x}$\n",
+    "\n",
+    "**log likelihood function**: $\\displaystyle \\large \\sum_{i=1}^{n} \\log(f(\\theta;x_i))$ where $\\mathbf{x} = (x_1, x_2, \\dots, x_n)$"
    ]
   },
   {
@@ -83,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Find $\\theta$ s.t. $\\displaystyle \\frac{\\partial \\mathcal{L}(\\theta;\\mathbf{x})}{\\partial \\theta}=0$"
+    "* Find $\\theta$ s.t. $\\Large \\frac{\\partial \\mathcal{L}(\\theta;\\mathbf{x})}{\\partial \\theta}=0$"
    ]
   },
   {
