docs: Modify headings and remove redundant cells

--- a/MLE.ipynb
+++ b/MLE.ipynb
@@ -36,6 +36,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculating mle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -74,26 +81,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xx = np.linspace(-3,3,10000)\n",
-    "yy = np.array([llf(i, normpdf_mean, normals, 1.) for i in xx] )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xx = np.linspace(5e-1,3,10000)\n",
-    "yy = np.array([llf(i, normpdf_std, normals, normals.mean()) for i in xx] )"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -124,6 +111,13 @@
    ],
    "source": [
     "print('mle for std:', brent(llf_neg, args = (normpdf_std, normals, normals.mean()), brack=(.5,1.,2.)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing"
    ]
   },
   {
@@ -202,7 +196,7 @@
    "source": [
     "**pdf**: $\\large f(x) = \\theta e^{-\\theta x}$\n",
     "\n",
-    "**log likelihood function**: $\\displaystyle \\large \\sum_{i=1}^{n} \\log(f(x_i|\\theta))$ where $\\mathbf{x} = (x_1, x_2, \\dots, x_n)$"
+    "**log likelihood function**: $\\displaystyle \\large \\sum_{i=1}^{5} \\log(f(x_i|\\theta))$ where $\\mathbf{x} = (3,3,3,1,2)$"
    ]
   },
   {
