docs: Remove redundant cells

--- a/Feature_selection.ipynb
+++ b/Feature_selection.ipynb
@@ -64,6 +64,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train: Linear Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 270,
    "metadata": {},
@@ -242,104 +249,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 180,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rfe = RFECV(estimator=model_lr, cv=5, scoring='r2')\n",
-    "\n",
-    "X_train = rfe.fit_transform(X_train, y_train)\n",
-    "X_test = rfe.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import PolynomialFeatures\n",
-    "pf = PolynomialFeatures(interaction_only=True, include_bias=False, degree=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train = pf.fit_transform(X_train)\n",
-    "X_test = pf.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.15362577, 0.53862372, 0.55781735, 0.6147621 , 0.63589357,\n",
-       "       0.70665287, 0.71114099, 0.71275687, 0.71151344, 0.71010646,\n",
-       "       0.71628974, 0.72234181, 0.72443573])"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rfe.grid_scores_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30.246750993923715"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model_lr.intercept_interaction_only="
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "28.996723619824778"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(model_lr.coef_ * X_test.values[0]).sum() + model_lr.intercept_"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modeling"
+    "# Train: Random Forest"
    ]
   },
   {
